--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="main-wrapper">
     <div class="card">
       <div class="img-container">
-        <img src="./images/image-equilibrium.jpg" alt="nft-image">
+        <img src="image-equilibrium.jpg" alt="nft-image">
         <div class= "overlay">
           <img src="./images/icon-view.svg" alt="">
         </div>
