--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <div class="creator">
         <div class="avatar">
-          <img src="./images/image-avatar.png" alt="">
+          <img src="image-avatar.png" alt="">
         </div>
         <p>Creation of <span>Jules Wyvern</span>.</p>
       </div>
