--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="img-container">
         <img src="image-equilibrium.jpg" alt="nft-image">
         <div class= "overlay">
-          <img src="./images/icon-view.svg" alt="">
+          <img src="icon-view.svg" alt="">
         </div>
       </div>
 
